Fixing gallery alignment.

--- a/sass/_media/_galleries.scss
+++ b/sass/_media/_galleries.scss
@@ -1,7 +1,6 @@
 ._gallery {
   @include flex-container;
   @include flex-container--wrap;
-  @include flex-center;
   margin-top: $spacing-regular--half;
 }
 
